--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,6 @@
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-light bg-light sticky-top">
   <a class="navbar-brand" href="#">
+    <img src="/assets/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
     Twirkov
   </a>
   <form class="form-inline">
