--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,12 +3,12 @@
     <img src="/assets/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
     Twirkov
   </a>
-  <form class="form-inline">
+  <form class="form-inline" action="/" method="GET">
     <div class="input-group">
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">@</span>
       </div>
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" name="screen_name">
       <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
     </div>
   </form>
