Made get request work with ghpages url

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <img src="/assets/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
     Twirkov
   </a>
-  <form class="form-inline" action="/" method="GET">
+  <form class="form-inline" action="/twirkov/" method="GET">
     <div class="input-group">
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">@</span>
